# meanings

./: .gitignore  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  README.md  bot.py  commands.md  paginator.py  pyproject.toml  requirements.txt
.github/: auto_assign.yml
.github/workflows/: python-ci.yml  python.yml
